resources/public/css/style.css
.do-not-display {
    display: none;
}
html {
	width: 100%;
	height: 100%;
	margin: 0px;
}
body {
	width: 100%;
	height: 95%;
	margin: 0px;
	padding: 0px;
	background-position: top center;
	background-repeat: no-repeat;
	font-family: Verdana, Geneva, sans-serif;
	line-height: 130%;
	color: #252525;
	background-color: white;
	font-size: small;
	text-align: justify;
	
}
#wrapper {
	width: 1024px;
	margin-top: 20px;
	margin-left: auto;
	margin-right: auto;
	display: block;
	margin-bottom: 20px;
}
#banner {
	width: 1018px;
	height: 80px;
	text-align: left;
	border: 3px solid #396538;
	border-radius: 5px;
	background-image:url(/img/Banner.jpg);
}
#banner img {
    height: 80px;
    float: left;
}
#buttons {
	position: relative;
	top: 52px;
	width: 1000px;	
}
.buttons ul { 
    list-style-type: none; 
    text-align: center;
}
.buttons ul li { 
	margin-bottom: 3px;
	display: inline;
}
.buttons ul li a {
	text-decoration: none;
	padding: 0em 0.5em 0.1em 0;
	color: #fff;
	border: 0.1em #436756 solid;
	background-color: #436756;
	border-bottom-style: none;
}
.buttons ul li a:hover,
.buttons ul li a:link#current,
.buttons ul li a:visited#current
{
    color: #436756;
    background-color: white;
    text-align: center;
}
#tabs {
    position: relative;
    top: 7.5px;
    margin-left: -250px;
    width: 1524px;
    float: none;
    clear: both;
}
#tabs .buttons ul li a {
    background-color: #356a46;
}
#tabs .buttons ul li a:hover,
#tabs .buttons ul li a:visited#current {
    color: #356a46;
    background-color: white;
}
#scroll {
	width:100%;
	height:30px;
}
.hbutton {
	width: 20%;
	float: right;
	overflow: hidden;
	text-align: center;
	
}
#col1 {
	float: left;
	height: 600px;
	width: 170px;
	position: relative;
	border: 3px solid; 
	border-color: #396538;
	border-radius: 5px;
	padding: 5px;
	margin: 5px;
	margin-left: 0px;
	background-color: rgba(39,65,38, 0.05);
}
#blurb {
	float: right;
	height: 600px;
	overflow-x: hidden;
	overflow-y: auto;
	width: 600px;
	padding: 10px;
}
#mapsvg {
	clear: both;
}
#map {
    float: left;
	height: 600px;
	width: 350px;
	padding: 10px;
	margin: 0px;
}
#map img {
	max-height: 100%;
	max-width: 100%;
}
.col1b {
	height: 200px;
	width: 100%;
}
.colb2 {
	height: 200px;
	width: 100%;
}
#main {
	width:100%;
	margin-top: 15px;
}
.colb3 {
	height: 200px;
	width: 100%;
}
#footer , #info-header{
	width: 1018px;
	height: 62px;
	text-align: right;
	border: 3px solid #396538;
	border-radius: 5px;
	margin-left: auto;
	margin-right: auto;
	background-color: rgba(39,65,38, 0.05);
	margin-bottom: 2px;
	clear: both;
	}
#info-header {
    margin-top: 5px;
	width: 1018px;
    text-align: left;
	height: 160px;
	padding: 5px;
}
#view-2 {
	width: 1024px;
	height: 600px;
	padding-top: 5px;
	padding-bottom: 10px;
	float: left;
}

#view-2-1 {
	width: 505px;
	height: 595px;
	float: left;
	border: 3px solid #396538;
	border-radius: 5px;
	background: #F2F2F2;
}
#view-2-2 {
	width: 505px;
	height: 595px;
	float: left;
	border: 3px solid #396538;
	border-radius: 5px;
	float: right;
	background: #F2F2F2;
}
#view-2-map, #view-2-map object {
	width: 500px;
	height: 420px;
	text-align: center;
}
#view-2-map-tool{
	width: 500px;
	height: 60px;
	float: left;
	background: #aaaaaa;	
}
#view-2-2-chart {
	width: 450px;
	height: 400px;
	float: left;
}
#view-2-2-expl {
	width: 500px;
	height: 170px;
	float: left;
}
#view-3-text{
	width: 1010px;
	float: right;
	padding: 5px;
	border: 3px solid #396538;
	border-radius: 5px;
	margin-top: 5px;
	margin-bottom: 5px;
}
#content {
	height: 600px;
}
#view-3-text img{
    margin: 5px;
}

.text-pic-right{
	width: 200px;
	height: 600px;
	float: right;
	padding: 5px;
	position:relative;
	margin: 5px;
	margin-top: 20px;
	}
.text-pic-right img{
    margin: 5px;
}
	
.text-pic-bottom{
	width: 790px;
	height: 150px;
	position: relative;
	}
	
.text-box{
	padding: 5px;
	border: 3px #396538 solid;
	border-radius: 5px;
	background-color: #BDD2B7;	
	}
		
#text-box-center{
	padding: 5px;
	border: 3px #396538 solid;
	border-radius: 5px;
	background-color: #BDD2B7;	
	margin-left: auto;
	margin-right: auto;
	max-width: 500px;
	}
	
#text-box-2{
	padding: 5px;
	border: 3px #396538 solid;
	border-radius: 5px;
	background-color: #BDD2B7;
	clear:both;
	}
	
#text-box-3{
	padding: 5px;
	border: 3px #396538 solid;
	border-radius: 5px;
	border-style: dashed;
	}
	
.resize{
	height: auto;
	width: auto;
	}

.picture clear { 
	background-color: #F9F9F9;
	border: 1px solid #CCCCCC; padding: 5px;
	font: 11px/1.4em Arial, sans-serif;
	max-width: 680px;	
	float:clear;
	}
	
.picture { 
	background-color: #F9F9F9;
	border: 1px solid #CCCCCC; padding: 5px;
	font: 11px/1.4em Arial, sans-serif;
	max-width: 340px;	
	margin-left:auto; 
	margin-right:auto;
	}

.picture img { 
	border: 1px solid #CCCCCC;
	vertical-align:middle; margin-bottom: 3px; 
	max-width:330px; 
	}
	

.right { 
	margin: 0.5em 0pt 0.5em 0.8em; float:right; clear:both; 
	}

.left { 
	margin: 0.5em 0.8em 0.5em 0; float:left; 
	}
	
.picture-large { 	
	background-color: #F9F9F9;
	border: 1px solid #CCCCCC; padding: 5px;
	font: 11px/1.4em Arial, sans-serif;
	width: 575px;
	margin-left: auto;
	margin-right:auto;
	}
	
.picture-large img { 
	border: 1px solid #CCCCCC;
	vertical-align:middle; 
	margin-bottom: 3px; 
	max-width:565px;
}
#mapouter {
    text-align: center;
}
.picture-small { 
	background-color: #F9F9F9;
	border: 1px solid #CCCCCC; padding: 5px;
	font: 11px/1.4em Arial, sans-serif;
	max-width: 200px;	
	}

.picture-small img { 
	border: 1px solid #CCCCCC;
	vertical-align:middle; margin-bottom: 3px; 
	max-width:190px;
	}
	
.picture-extra-large {
	border: 1px solid #CCCCCC;
	vertical-align:middle; margin-bottom: 3px; 
	max-width:600px;
	}
	
.picture-extra-large img { 
	border: 1px solid #CCCCCC;
	vertical-align:middle; margin-bottom: 3px; 
	max-width:580px;
	}

.reference{
	vertical-align: super;
	color: blue;
	font-size: 75%;
	}


/*------------------------------------*\
	NAV
\*------------------------------------*/
#nav{
	list-style:none;
	font-weight:bold;
	margin-bottom:10px;
	/* Clear floats */
	float:left;
	width:100%;
	/* Bring the nav above everything else--uncomment if needed.
	position:relative;
	z-index:5;
	*/
}
#nav li{
	float:left;
	margin-right:10px;
	position:relative;
}
#nav a{
	display:block;
	padding: 0em 0.5em 0.1em 0;
	color: black;
	background: grey;
	text-decoration:none;
	border: 3px solid grey;
	border-style: outset;
}
#nav a:hover{
	color:black;
	background: grey;
	text-decoration:none;
	border-style: outset;
}

/*--- DROPDOWN ---*/
#nav ul{
	background: #fff; /* Adding a background makes the dropdown work properly in IE7+. Make this as close to your page's background as possible (i.e. white page == white background). */
	background:rgba(255,255,255,0); /* But! Let's make the background fully transparent where we can, we don't actually want to see it if we can help it... */
	list-style:none;
	position:absolute;
	left:-9999px; /* Hide off-screen when not needed (this is more accessible than display:none;) */
}
#nav ul li{
	padding-top:1px; /* Introducing a padding between the li and the a give the illusion spaced items */
	float:none;
	margin: 0;
}
#nav ul a{
	white-space:nowrap; /* Stop text wrapping and creating multi-line dropdown items */
}
#nav li:hover ul{ /* Display the dropdown on hover */
	left:-40px; /* Bring back on-screen when needed */
}
#nav li:hover a{ /* These create persistent hover states, meaning the top-most link stays 'hovered' even when your cursor has moved down the list. */
	background: #666666;
	text-decoration:none;
}
#nav li:hover ul a{ /* The persistent hover state does however create a global style for links even before they're hovered. Here we undo these effects. */
	text-decoration:none;
}
#nav li:hover ul li a:hover, 
#nav li:hover ul li a:active,
#nav li:hover ul li a#current{ /* Here we define the most explicit hover states--what happens when you hover each individual link. */
	background: #999999;
	color: black;
	border-style: inset;
}
#maptools{
    border: 1px solid #666666;
    background: #aaaaaa;
    width: 100%;
    height: 40px;
    float: none;
}

